// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webex Local Media component snapshot matches snapshot of disabled local video 1`] = `
<div
  className="local-media"
>
  <WebexAvatar
    displayStatus={false}
    personID="default"
  />
</div>
`;

exports[`Webex Local Media component snapshot matches snapshot of local video 1`] = `
<div
  className="local-media"
>
  <video
    autoPlay={true}
    playsInline={true}
  />
</div>
`;
